# chat-map

./: .gitignore  LICENSE  README.md  pyproject.toml
agent/: RemoteBrowserUseAgent.py
client/: BrowserUseClient.js
server/: BrowserUseServer.py  BrowserUseServerMCPController.py
skills/chat_map/: skill.md
web/: .env.example  .gitignore  __init__.py  app.py  config.py
web/routers/: __init__.py  browser_proxy.py  chat.py  pages.py  session.py  wx_config.py  wx_login.py
web/services/: __init__.py  agent_session.py  event_bridge.py
web/static/: chat.css  chat.js
web/templates/: index.html  map.html.j2
wxmp/: README.md  app.js  app.json  app.wxss
wxmp/pages/index/: index.js  index.json  index.wxml  index.wxss
wxmp/utils/: WxmpMapClient.js  make_icons.js  markdown.js  sha1.js  uuidv5.js  ws_client.js
