[project]
name = "chat-map"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agentscope[full]>=2.0.1",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.137",
    "uvicorn[standard]>=0.49",
    "jinja2>=3.1",
    "pydantic-settings>=2.14",
    "websockets>=16.0",
    "httpx>=0.27",
]
